--- a/index.html
+++ b/index.html
@@ -265,6 +265,6 @@
 </div>
 <!-- end of container -->
 
-<script src="./js/all.js"></script>
+<script src="https://kit.fontawesome.com/14e0c06b3c.js" crossorigin="anonymous"></script>
 </body>
 </html>
