--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Madugu Hotel</title>
   <link rel="stylesheet" href="./css/index.css">
   <link rel="stylesheet" href="./css/media.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 <body>
 <!-- container -->
@@ -265,6 +266,6 @@
 </div>
 <!-- end of container -->
 
-<script src="./js/all.js"></script>
+<script src="https://kit.fontawesome.com/14e0c06b3c.js" crossorigin="anonymous"></script>
 </body>
 </html>
