--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="./css/index.css">
   <link rel="stylesheet" href="./css/media.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Dancing+Script:wght@700&family=Pacifico&family=Lobster&family=Nunito+Sans:opsz,wght@6..12,200&family=Kanit&display=swap"
+    rel="stylesheet">
 </head>
 <body>
 <!-- container -->
@@ -18,7 +22,12 @@
     <p class="brand-msg">your comfort is our priority</p>
   </aside>
 
-  <nav class="nav-sm">
+  <nav class="mobile-nav">
+    <div id="navToggle" class="nav-toggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
     <ul class="nav-links">
       <li class="nav-item"> <a href="#banner" class="nav-link">home</a> </li>
       <li class="nav-item"> <a href="#about" class="nav-link">about</a> </li>
@@ -26,22 +35,8 @@
       <li class="nav-item"> <a href="#contact" class="nav-link">contact</a> </li>
       <li class="nav-item"> <a href="#blog" class="nav-link">blog</a> </li>
     </ul>
-  </nav>    
+  </nav>
 </header>
-<nav class="nav">
-  <div id="nav-btn">
-    <div></div>
-    <div></div>
-    <div></div>
-  </div>
-  <ul id="nav-links" class="hide-nav">
-    <li class="nav-item"> <a href="#banner" class="nav-link">home</a> </li>
-    <li class="nav-item"> <a href="#about" class="nav-link">about</a> </li>
-    <li class="nav-item"> <a href="#explore" class="nav-link">explore</a> </li>
-    <li class="nav-item"> <a href="#contact" class="nav-link">contact</a> </li>
-    <li class="nav-item"> <a href="#blog" class="nav-link">blog</a> </li>
-  </ul>
-</nav>
 <!-- end of header section -->
 
 <!-- main section  -->
@@ -57,28 +52,44 @@
       </aside>
 
       <aside class="form-section">
-        <form action="/" method="post" id="reserve-form">
-          <input type="text" name="" id="name" placeholder="Full Name">
-          <input type="text" name="" id="phone" placeholder="+(234) Phone Number">
-          <input type="email" name="" id="email" placeholder="Email">
-          <label for="rooms">Room Type</label>
-          <select name="" id="rooms">
-            <option value="single">Single</option>
-            <option value="couple">Couple</option>
-            <option value="three">Room of 3</option>
-            <option value="self">Self Contained</option>
-          </select>
+        <form action="" method="post" id="reserve-form">
+          <div class="form-section">
+            <input type="text" name="name" id="name" class="input" placeholder="Full Name">
+            <div class="error-message hidden"></div>
+          </div>
+          <div class="form-section">
+            <input type="text" name="phone" id="phone" class="input" placeholder="+(234) Phone Number">
+            <div class="error-message hidden"></div>
+          </div>
+          <div class="form-section">
+            <input type="email" name="email" id="email" class="input" placeholder="Email">
+            <div class="error-message hidden"></div>
+          </div>
+          <div class="form-section">
+            <label for="rooms">Room Type</label>
+            <select name="" id="rooms">
+              <option value="single">Single</option>
+              <option value="couple">Couple</option>
+              <option value="three">Room of 3</option>
+              <option value="self">Self Contained</option>
+            </select>
+          </div>
           <section class="checks">
-            <aside class="check">
+            <div class="form-section check">
               <label for="check-in">Check In</label>
-              <input type="date" name="" id="check-in">
-            </aside>
-            <aside class="check">
+              <input type="date" name="checkIn" id="check-in" class="input">
+              <div class="error-message hidden"></div>
+            </div>
+            <div class="form-section check">
               <label for="check-out">Check Out</label>
-              <input type="date" name="" id="check-out">
-            </aside>
+              <input type="date" name="checkOut" id="check-out" class="input">
+              <div class="error-message hidden"></div>
+            </div>
           </section>
-          <button type="button" class="btn submit-btn">Reserve</button>
+          <div class="success-msg hidden">
+            You have successfully booked a room!
+          </div>
+          <button type="submit" id="reserve-btn" class="btn submit-btn">Reserve</button>
         </form>
       </aside>
     </div>
@@ -157,29 +168,32 @@
 
   <!-- contact section -->
   <section id="contact">
-    <div class="contact-main">
-      <h2>contact us</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim iure qui adipisci in rem aspernatur placeat ex, eveniet voluptatum expedita.
-      </p>
-      <abbr title="email">Email us at: <a href="mailto:lorem@gmail.com">maduguhotel@nomail.com</a> </abbr>
+    <h2>contact us</h2>
+    <div class="contact-wrapper">
+      <div class="contact-main">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim iure qui adipisci in rem aspernatur placeat ex, eveniet voluptatum expedita.
+        </p>
+        <abbr title="email">Email us at: <a href="mailto:lorem@gmail.com">maduguhotel@nomail.com</a> </abbr>
+        
+        <blockquote class="address">
+          <address>
+            No 46. Main Street, <br>
+            Tudun Wada, <br>
+            Zaria, <br>
+            Kaduna State.
+          </address>
+        </blockquote>
+      </div>
+  
+  
+      <form action="#" method="post">
+        <input type="text" placeholder="Name">
+        <input type="email" placeholder="Email">
+        <textarea cols="30" rows="10" placeholder="Message"></textarea>
+        <button type="submit">Send <i class="fas fa-paper-plane"></i></button>
+      </form>
     </div>
-
-    <blockquote class="address">
-      <address>
-        No 46. Main Street, <br>
-        Tudun Wada, <br>
-        Zaria, <br>
-        Kaduna State.
-      </address>
-    </blockquote>
-
-    <form action="#" method="post">
-      <input type="text" placeholder="Name">
-      <input type="email" placeholder="Email">
-      <textarea cols="30" rows="10" placeholder="Message"></textarea>
-      <button type="submit">Send <i class="fas fa-paper-plane"></i></button>
-    </form>
   </section>
   <!-- end of contact section -->
 
@@ -237,6 +251,15 @@
 
 <!-- footer section  -->
 <footer class="footer">
+  <div class="quick-links">
+    <h4>Quick Links</h4>
+    <a href="#" class="blog-link">Home</a>
+    <a href="#" class="blog-link">A Link</a>
+    <a href="#" class="blog-link">Management</a>
+    <a href="#" class="blog-link">Another Link</a>
+    <a href="#" class="blog-link">Blog</a>
+    <a href="#" class="blog-link">Another x2 Link</a>
+  </div>
   <abbr title="social" class="social-accounts">
     <h3>follow our social accounts</h3>
     <div class="social-wrap">
@@ -246,15 +269,6 @@
       <a href="#" class="social-icon"><i class="fab fa-pinterest"></i></a>
     </div>
   </abbr>
-  <div class="quick-links">
-    <h4>Quick Links</h4>
-    <a href="#" class="blog-link">Home</a>
-    <a href="#" class="blog-link">Link</a>
-    <a href="#" class="blog-link">Management</a>
-    <a href="#" class="blog-link">Link</a>
-    <a href="#" class="blog-link">Blog</a>
-    <a href="#" class="blog-link">Link</a>
-  </div>
   <div class="sponsors">
     <a href="#" class="sponsors-link">
       <i class="fab fa-html5 fa-3x"></i>
