Modify contact form

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       </div>
   
   
-      <form action="#" method="post">
+      <form action="#" method="post" class="contact-form">
         <input type="text" placeholder="Name">
         <input type="email" placeholder="Email">
         <textarea cols="30" rows="10" placeholder="Message"></textarea>
