update contact and footer sectiob

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim iure qui adipisci in rem aspernatur placeat ex, eveniet voluptatum expedita.
         </p>
-        <abbr title="email">Email us at: <a href="mailto:lorem@gmail.com">maduguhotel@nomail.com</a> </abbr>
+        Email us at: <a href="mailto:lorem@gmail.com">maduguhotel@nomail.com</a>
         
         <blockquote class="address">
           <address>
@@ -188,6 +188,7 @@
   
   
       <form action="#" method="post" class="contact-form">
+        <h3>Send us a message</h3>
         <input type="text" placeholder="Name">
         <input type="email" placeholder="Email">
         <textarea cols="30" rows="10" placeholder="Message"></textarea>
@@ -260,7 +261,7 @@
     <a href="#" class="blog-link">Blog</a>
     <a href="#" class="blog-link">Another x2 Link</a>
   </div>
-  <abbr title="social" class="social-accounts">
+  <div>
     <h3>follow our social accounts</h3>
     <div class="social-wrap">
       <a href="#" class="social-icon"><i class="fab fa-facebook"></i></a>
@@ -268,7 +269,7 @@
       <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
       <a href="#" class="social-icon"><i class="fab fa-pinterest"></i></a>
     </div>
-  </abbr>
+  </div>
   <div class="sponsors">
     <a href="#" class="sponsors-link">
       <i class="fab fa-html5 fa-3x"></i>
