update styling across all sections

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./css/media.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Dancing+Script:wght@700&family=Pacifico&family=Lobster&family=Nunito+Sans:opsz,wght@6..12,200&family=Kanit&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Dancing+Script:wght@700&family=Pacifico&family=Lobster&family=Nunito+Sans:opsz,wght@6..12,200&family=Kanit&family=Roboto:ital,wght@0,100;0,300;1,100;1,300&display=swap"
     rel="stylesheet">
 </head>
 <body>
