add jquery for more functionalities

--- a/index.html
+++ b/index.html
@@ -422,6 +422,7 @@
 </div>
 <!-- end of container -->
 
+<script src="./node_modules/jquery/dist/jquery.min.js"></script>
 <script src="./js/action.js"></script>
 </body>
 </html>
